objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Email_Address__c</fullName>
        <inlineHelpText>I can store agent contact email address here.</inlineHelpText>
        <label>Agent Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Agent__c</fullName>
        <label>Collateral Insurance Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_City__c</fullName>
        <label>Collateral Insurance City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Company__c</fullName>
        <label>Collateral Insurance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Phone__c</fullName>
        <label>Collateral Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Policy_Expiration_D__c</fullName>
        <inlineHelpText>The date this policy ends.</inlineHelpText>
        <label>Collateral Insurance Policy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Policy_Issue_Date__c</fullName>
        <label>Collateral Insurance Policy Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Policy_Number__c</fullName>
        <label>Collateral Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Policy_Value__c</fullName>
        <label>Collateral Insurance Policy Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_State__c</fullName>
        <label>Collateral Insurance State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Street__c</fullName>
        <label>Collateral Insurance Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Zip__c</fullName>
        <label>Collateral Insurance Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Past_Policy_Expiration__c</fullName>
        <description>Number of days past the policy expiration date. If Today is not past the evaluation date, then this returns &quot;0&quot;.</description>
        <formula>IF( ISNULL(Collateral_Insurance_Policy_Expiration_D__c) || (Today() - Collateral_Insurance_Policy_Expiration_D__c &lt;= 0), Null , (Today() - Collateral_Insurance_Policy_Expiration_D__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days the policy has been expired.</inlineHelpText>
        <label>Days Past Policy Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Policy_Expiration__c</fullName>
        <description>Number of days until the Next Policy Expiration Date. If today is not before the next evaluation date, then this returns 0.</description>
        <formula>IF( ISNULL(Collateral_Insurance_Policy_Expiration_D__c) || (Collateral_Insurance_Policy_Expiration_D__c - Today() &lt; 0) , Null, (Collateral_Insurance_Policy_Expiration_D__c - Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days until the policy expires.</inlineHelpText>
        <label>Days Until Policy Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Insurance__c</fullName>
        <label>Type of Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Wind / Hail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Insurance</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>